--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^6.0.2",
+    "node-sass": "^4.13.1",
     "particles.js": "^2.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-loading-skeleton": "^2.0.1",
     "react-particles-js": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1"
