--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "chatui",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@bit/bondz.react-epic-spinners.scaling-squares-spinner": "^0.3.0",
-    "@material-ui/core": "^4.9.0",
-    "@material-ui/icons": "^4.5.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "firebase": "^6.0.2",
-    "node-sass": "^7.0.0",
-    "particles.js": "^2.0.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-loading-skeleton": "^2.0.1",
-    "react-particles-js": "^2.7.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "bit": {
-    "env": {
-      "compiler": "bit.envs/compilers/react@1.0.14"
-    },
-    "componentsDefaultDirectory": "components/{name}",
-    "packageManager": "npm"
-  }
+	"name": "chatui",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"react-epic-spinners": "0.5.0",
+		"@material-ui/core": "^4.12.4",
+		"@material-ui/icons": "^4.11.3",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.3.0",
+		"@testing-library/user-event": "^14.4.3",
+		"firebase": "^9.9.3",
+		"node-sass": "^7.0.1",
+		"particles.js": "^2.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-loading-skeleton": "^3.1.0",
+		"react-particles-js": "^3.6.0",
+		"react-router-dom": "^6.3.0",
+		"react-scripts": "5.0.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"bit": {
+		"env": {
+			"compiler": "bit.envs/compilers/react@1.0.14"
+		},
+		"componentsDefaultDirectory": "components/{name}",
+		"packageManager": "npm"
+	}
 }
